# bandito

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  release.sh  storage-foundation.md  user-guide.md
.claude/skills/bandito/: SKILL.md
.claude/skills/bandito/phases/: onboarding.md  operations.md  reward-design.md
.github/workflows/: cli.yml  engine.yml  publish-javascript.yml  publish-python.yml  release.yml  sdk-javascript.yml  sdk-python.yml
cli/: Cargo.toml  README.md
cli/src/: config.rs  http.rs  judge_client.rs  main.rs  s3.rs  store.rs  util.rs
cli/src/commands/: arm.rs  config.rs  create.rs  install.rs  judge.rs  leaderboard.rs  list.rs  mod.rs  signup.rs  skill.rs  template.rs
cli/src/tui/: mod.rs  state.rs
cli/src/tui/screens/: bandit_select.rs  dashboard.rs  help.rs  mod.rs
cli/src/tui/widgets/: detail_pane.rs  event_list.rs  mod.rs  status_bar.rs
engine/: Cargo.toml  pyproject.toml
engine/src/: constants.rs  engine.rs  features.rs  lib.rs  linalg.rs  python.rs  rng.rs  wasm.rs
homebrew-formula/: bandito.rb
sdks/javascript/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts
sdks/javascript/src/: client.ts  config.ts  engine.ts  http.ts  index.ts  models.ts  store.ts  worker.ts
sdks/javascript/tests/: client.test.ts  contract.test.ts  engine.test.ts  helpers.ts  http.test.ts  models.test.ts  store.test.ts  worker.test.ts
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/bandito/: __init__.py  _worker.py  client.py  config.py  http.py  models.py  store.py
sdks/python/tests/: conftest.py  test_budget.py  test_client.py  test_concurrency.py  test_contract.py  test_engine.py  test_models.py  test_pull.py  test_store.py  test_sync.py  test_update.py
skills/bandito/: SKILL.md
skills/bandito/phases/: integration.md  judge.md
skills/bandito/references/: cli-reference.md
