[package]
name = "bandito-cli"
version = "0.1.5"
edition = "2021"
description = "CLI and TUI for Bandito contextual bandit optimizer"
license = "MIT"

[[bin]]
name = "bandito"
path = "src/main.rs"

[dependencies]
bandito-engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6"
arboard = "3"
