[package]
name = "bandito-engine"
version = "0.1.4"
edition = "2021"
description = "Pure math engine for Bandito contextual bandit optimization"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
