[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandito"
version = "0.1.0"
description = "Contextual bandit SDK for LLM model and prompt selection"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Mike Schulte", email = "mwschulte23@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "bandito-engine>=0.1.0",
]

[project.urls]
Homepage = "https://bandito.dev"
Repository = "https://github.com/bandito-ai/bandito"

[tool.setuptools.packages.find]
include = ["bandito*"]

[tool.uv.sources]
bandito-engine = { path = "../../engine", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
