[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "bandito"
version = "0.1.5"
description = "Contextual bandit SDK for LLM model and prompt selection"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Mike Schulte", email = "mwschulte23@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://bandito.dev"
Repository = "https://github.com/bandito-ai/bandito"

[tool.maturin]
manifest-path = "../../engine/Cargo.toml"
features = ["python"]
module-name = "bandito._engine"
python-packages = ["bandito"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "respx>=0.22.0",
]
